122. Connecting to MySQL Docker Instance

--- a/product/src/main/resources/application.yml
+++ b/product/src/main/resources/application.yml
@@ -4,11 +4,11 @@ spring:
   datasource:
     #    url: jdbc:postgresql://localhost:5432/product
 #    url: jdbc:postgresql://ep-autumn-mud-adqm8t9d-pooler.c-2.us-east-1.aws.neon.tech/product?sslmode=require&channel_binding=require'
-    url: jdbc:mysql://localhost:3306/productservice
+    url: jdbc:mysql://localhost:3307/productdb
 #    username: neondb_owner
 #    password: npg_Ffkt5udzPKh3
-    username: root
-    password: thailam123
+    username: admin
+    password: admin
   jpa:
 #    database: POSTGRESQL
     show-sql: true
