137. Challenge: Update Active Profile Dynamically in a Microservice

--- a/addition/configdemo/src/main/resources/application.yml
+++ b/addition/configdemo/src/main/resources/application.yml
@@ -4,9 +4,15 @@ spring:
 #  profiles:
 #    active: dev
 
+#build:
+#  id: ${ID}
+#  version: ${VERSION}
+#  name: ${NAME}
+
 build:
-  id: ${ID}
-  version: ${VERSION}
-  name: ${NAME}
+  id: 10101
+  version: 1.2.3.4
+  name: "Application"
+  type: "Application Build"
 
 #ID=9999;NAME=NEW_NAME;VERSION=3.3.3.3
