--- a/addition/configdemo/.env
+++ b/addition/configdemo/.env
@@ -1,7 +1,1 @@
-; BUILD_ID=4444
-; BUILD_NAME=NAME_TEST
-; BUILD_VERSION=1.0.0
-
-ID=4444
-NAME=NAME_TEST
-VERSION=1.0.0
+SPRING_PROFILES_ACTIVE=dev
