--- a/addition/configdemo/src/main/resources/application.yml
+++ b/addition/configdemo/src/main/resources/application.yml
@@ -4,15 +4,15 @@ spring:
 #  profiles:
 #    active: dev
 
-#build:
-#  id: ${ID}
-#  version: ${VERSION}
-#  name: ${NAME}
-
 build:
-  id: 10101
-  version: 1.2.3.4
-  name: "Application"
-  type: "Application Build"
+  id: ${ID}
+  version: ${VERSION}
+  name: ${NAME}
+
+#build:
+#  id: 10101
+#  version: 1.2.3.4
+#  name: "Application"
+#  type: "Application Build"
 
 #ID=9999;NAME=NEW_NAME;VERSION=3.3.3.3
