--- a/addition/config-mgmt/configserver/src/main/resources/application.yml
+++ b/addition/config-mgmt/configserver/src/main/resources/application.yml
@@ -1,12 +1,30 @@
 spring:
   application:
     name: configserver
-
+  profiles:
+    active: jdbc
+  datasource:
+    url: jdbc:mysql://localhost:3306/configdb
+    username: root
+    password: thailam123
+    driver-class-name: com.mysql.cj.jdbc.Driver
   cloud:
     config:
       server:
-        git:
-          uri: https://github.com/ThaiVanLam/app-configuration
+        jdbc:
+          sql: "SELECT PROP_KEY, PROP_VALUE FROM PROPERTIES WHERE APPLICATION=? AND PROFILE=? AND LABEL=?"
+          default-label: main
+
+#  cloud:
+#    config:
+#      server:
+#        git:
+#          uri: https://github.com/ThaiVanLam/app-configuration
+#          username: ${GIT_USER}
+#          password: ${GIT_TOKEN}
+#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
 
 server:
   port: 8888
+
+
