--- a/addition/config-mgmt/configserver/src/main/resources/application.yml
+++ b/addition/config-mgmt/configserver/src/main/resources/application.yml
@@ -5,8 +5,8 @@ spring:
     active: jdbc
   datasource:
     url: jdbc:mysql://localhost:3306/configdb
-    username: root
-    password: thailam123
+    username: ${USER}
+    password: ${PASSWORD}
     driver-class-name: com.mysql.cj.jdbc.Driver
   cloud:
     config:
@@ -27,4 +27,6 @@ spring:
 server:
   port: 8888
 
+encrypt:
+  key: "0E329232EA6D0D73"
 
