150. File-Based Configuration Management in Spring Boot

--- a/addition/config-mgmt/configserver/src/main/resources/application.yml
+++ b/addition/config-mgmt/configserver/src/main/resources/application.yml
@@ -1,13 +1,21 @@
 spring:
   application:
     name: configserver
+  profiles:
+    active: native
   cloud:
     config:
       server:
-        git:
-          uri: https://github.com/ThaiVanLam/app-configuration
-          username: ${GIT_USER}
-          password: ${GIT_TOKEN}
+        native:
+          search-locations: classpath:/config
+
+#  cloud:
+#    config:
+#      server:
+#        git:
+#          uri: https://github.com/ThaiVanLam/app-configuration
+#          username: ${GIT_USER}
+#          password: ${GIT_TOKEN}
 
 
 #  profiles:
