--- a/configserver/src/main/resources/application.yml
+++ b/configserver/src/main/resources/application.yml
@@ -9,11 +9,11 @@ spring:
         native:
           search-locations: file:///E:\file_tai_lieu\Course\do_an_tot_nghiep\Spring Boot Microservices Professional eCommerce Masterclass\Microservices\configserver\src\main\resources\config
 
-  rabbitmq:
-    host: localhost
-    port: 5672
-    username: guest
-    password: guest
+#  rabbitmq:
+#    host: localhost
+#    port: 5672
+#    username: guest
+#    password: guest
 
 management:
   endpoints:
