--- a/configserver/src/main/resources/config/order-service.yml
+++ b/configserver/src/main/resources/config/order-service.yml
@@ -1,14 +1,14 @@
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/order
-    username: admin
-    password: admin
+    url: ${URL}
+    username: ${USERNAME}
+    password: ${PASSWORD}
   jpa:
-    database: POSTGRESQL
-    show-sql: true
+    database: ${DATABASE}
+    show-sql: ${SHOW_SQL}
     hibernate:
-      ddl-auto: update
-    database-platform: org.hibernate.dialect.PostgreSQLDialect
+      ddl-auto: ${DDL_AUTO}
+    database-platform: ${DATABASE_PLATFORM}
 
 server:
-  port: 8083
+  port: ${PORT}
