--- a/configserver/src/main/resources/config/product-service.yml
+++ b/configserver/src/main/resources/config/product-service.yml
@@ -1,19 +1,19 @@
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/product
-    username: admin
-    password: admin
+    url: ${URL}
+    username: ${USERNAME}
+    password: ${PASSWORD}
   jpa:
-    database: POSTGRESQL
-    show-sql: true
+    database: ${DATABASE}
+    show-sql: ${SHOW_SQL}
     hibernate:
-      ddl-auto: update
-    database-platform: org.hibernate.dialect.PostgreSQLDialect
+      ddl-auto: ${DDL_AUTO}
+    database-platform: ${DATABASE_PLATFORM}
     properties:
       hibernate:
-        format_sql: true
+        format_sql: ${FORMAT_SQL}
 
 server:
-  port: 8081
+  port: ${PORT}
 
 
