--- a/configserver/src/main/resources/config/user-service.yml
+++ b/configserver/src/main/resources/config/user-service.yml
@@ -1,8 +1,8 @@
 spring:
   data:
     mongodb:
-      uri: mongodb://localhost:27017/userdb
-      database: userdb
+      uri: ${URI}
+      database: ${DATABASE}
 
 server:
-  port: 8082
+  port: ${PORT}
