--- a/configserver/src/main/resources/config/user-service.yml
+++ b/configserver/src/main/resources/config/user-service.yml
@@ -1,8 +1,22 @@
 spring:
   data:
     mongodb:
-      uri: ${URI}
-      database: ${DATABASE}
+      uri: mongodb://localhost:27017/userdb
+      database: userdb
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
 
 server:
-  port: ${PORT}
+  port: 8082
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+
+app:
+  message: "Hello"
