--- a/product/pom.xml
+++ b/product/pom.xml
@@ -45,6 +45,16 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-bus-amqp</artifactId>
+        </dependency>
+
         <!--		<dependency>-->
         <!--			<groupId>com.h2database</groupId>-->
         <!--			<artifactId>h2</artifactId>-->
