--- a/configserver/src/main/resources/config/order-service.yml
+++ b/configserver/src/main/resources/config/order-service.yml
@@ -27,3 +27,10 @@ server:
 
 app:
   message: "Hello order"
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka
+    register-with-eureka: true
+    fetch-registry: true
