--- a/configserver/src/main/resources/config/product-service.yml
+++ b/configserver/src/main/resources/config/product-service.yml
@@ -30,3 +30,9 @@ management:
 app:
   message: "Hello product"
 
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka
+    register-with-eureka: true
+    fetch-registry: true
