--- a/configserver/src/main/resources/config/user-service.yml
+++ b/configserver/src/main/resources/config/user-service.yml
@@ -20,3 +20,10 @@ management:
 
 app:
   message: "Hello"
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka
+    register-with-eureka: true
+    fetch-registry: true
