201. Setting Up Micrometer and Prometheus with Grafana for Metrics Collection

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 addition/evaluate-loki/.data/
 addition/evaluate-loki/.data/*
 addition/evaluate-loki/.data/**
+
+addition/evaluate-prometheus/.data/**
