--- a/configserver/src/main/resources/config/product-service.yml
+++ b/configserver/src/main/resources/config/product-service.yml
@@ -26,6 +26,9 @@ management:
     web:
       exposure:
         include: "*"
+  tracing:
+    sampling:
+      probability: 1.0
 
 app:
   message: "Hello product"
