--- a/configserver/src/main/resources/config/order-service.yml
+++ b/configserver/src/main/resources/config/order-service.yml
@@ -29,6 +29,14 @@ management:
 server:
   port: 8083
 
+rabbitmq:
+  exchange:
+    name: order.exchange
+  queue:
+    name: order.queue
+  routing:
+    key: order.tracking
+
 app:
   message: "Hello order"
 
